# fvGP

./: ..gitignore.un~  .fvgp.py.swp  .fvgp.py.un~  .fvgp_old.py.un~  .gitattributes  .gitignore  .readthedocs.yml  .test_fvgp.py.un~  AUTHORS.rst  CLAUDE.md  CONTRIBUTING.rst  HISTORY.rst  LEGAL.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  fvgp.py  global.txt  latest_hps.npy  output  pyproject.toml  requirements.txt  runTests.py  setup.cfg  setup.py  test_fvgp.py  test_fvgp2.py  timing.txt  todo.txt  torch_derivatives.ipynb  tox.ini
.github/workflows/: fvGP-CI.yml
dev/: ggmp.py  ggmp_old.py  gp_prior.py  gplvm.py  gpm.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: conf.py  index.md  index.rst
docs/source/_static/: custom.css
docs/source/api/: EnsembleFvGP.md  EnsembleGP.md  GP.md  fvGP.md  ggmp.md  gpHGDL.md  gpMCMC.md  kernels.md  logging.md  overview.md
docs/source/examples/: MultiTaskTest.ipynb  NonEuclideanInputSpaces.ipynb  SingleTaskTest.ipynb  gp2ScaleTest.ipynb  index.md  multi_task_test_notebook.ipynb  single-task.ipynb  single-task.md  single_task_test_notebook.ipynb
docs/source/examples/.ipynb_checkpoints/: single-task-checkpoint.ipynb
examples/: ComprehensiveTest.ipynb  MultiTaskTest.ipynb  NoNStat.ipynb  NonEuclideanInputSpaces.ipynb  SingleTaskTest.ipynb  advanced_kernels.py  example_kernels.py  expl_deepKernel_fvgp_hps.npy  ggmp_1d_demo.ipynb  gp2ScaleTest.ipynb  gp2Scale_example_HPC_GPU_jobscript.sl  gp2Scale_example_HPC_RunScript.py  gp2Scale_exampple_HPC_jobscript.sl  jobscript_cori.sl  latest_hps.npy  mt_climate_kernel.py  multi_task_test_notebook.ipynb  run_gp2Scale.py  run_gp2ScaleCPU.py  run_gp2ScaleCPU_local.py  run_gp2ScaleGPU.py  settings_arguments.md  single_task_test_notebook.ipynb  single_task_test_notebook_2d.ipynb  x_data.npy  y_data.npy
examples/.ipynb_checkpoints/: multi_task_test_notebook-checkpoint.ipynb  single_task_test_notebook-checkpoint.ipynb
examples/old_version_examples/: jobscript_perlmutter.sl  multi_task_test_notebook.ipynb  run_gp2ScaleCPU.py  run_gp2ScaleCPU_local.py  single_task_test_notebook.ipynb  single_task_test_notebook_2d.ipynb
fvgp/: .travis.yml  __init__.py  _version.py  advanced_kernels.py  base_gp.py  cli.py  data.py  deep_kernel_network.py  ensemble_fvgp.py  ensemble_gp.py  fvgp.py  fvgp2.py  fvgp_experts.py  ggmp.py  gp.py  gp2.py  gp2Scale.py  gp2ScaleR.py  gp2Scale_new.py  gp2Scale_o.py  gpHGDL.py  gpJAX.py  gpJax.py  gpLG.py  gpMCMC.py  gp_actor.py  gp_data.py  gp_kernels.py  gp_kv.py  gp_likelihood.py  gp_lin_alg.py  gp_marginal_density.py  gp_marginal_likelihood.py  gp_mcmc.py  gp_posterior.py  gp_prior.py  gp_priorV.py  gp_training.py  gpm2Scale.py  kernels.py  (+8 more)
fvgp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fvgp/.github/: ISSUE_TEMPLATE.md
gpytorch/: GP.ipynb
obsolete/: fvgp_old.py  gp2Scale.py  gp2Scale2.py  gp_old.py
tests/: 1d_test.py  __init__.py  ensemble_gp_notebook.ipynb  fvgp2_t.py  latest_hps.npy  multi_task_test_notebook.ipynb  out  out.html  run_tests.py  single_task_test_notebook.ipynb  test_fvgp.py  test_fvgp2.py  test_likelihood_derivatives.py  us_topo.npy  us_topo_test.py
tests/.ipynb_checkpoints/: ensemble_gp_notebook-checkpoint.ipynb  multi_task_test_notebook-checkpoint.ipynb  single_task_test_notebook-checkpoint.ipynb
