[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fvgp"
dependencies = [
    "wheel",
    "scipy ~= 1.13.0",
    "numpy ~= 1.26.4",
    "dask ~= 2024.1.0",
    "distributed ~= 2024.1.0",
    "hgdl ~= 2.1.9",
    "loguru",
]
# imate
# pytorch
requires-python = ">=3.9"
authors = [
    { name = "Marcus Michael Noack", email = "MarcusNoack@lbl.gov" },
    { name = "Ronald J. Pandolfi", email = "ronpandolfi@lbl.gov" },
]
maintainers = [
    { name = "Marcus Michael Noack", email = "MarcusNoack@lbl.gov" },
    { name = "Ronald J. Pandolfi", email = "ronpandolfi@lbl.gov" },
]
description = "Python package for highly flexible function-valued Gaussian processes (fvGP)"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["autonomous", "self driving", "adaptive", "gui", "qt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Intended Audience :: Developers',
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "Natural Language :: English",
]
dynamic = ["version"]

[project.optional-dependencies]
docs = ['sphinx', 'sphinx-rtd-theme', 'myst-parser', 'myst-nb', 'sphinx-panels', 'autodocs', 'jupytext']
tests = ['pytest', 'codecov', 'pytest-cov', 'imate']
plotting = ['matplotlib', 'plotly', 'notebook']

[project.urls]
Homepage = "https://github.com/lbl-camera/fvgp"
Documentation = "https://fvgp.readthedocs.io/"
Repository = "https://github.com/lbl-camera/fvgp.git"
"Bug Tracker" = "https://github.com/lbl-camera/fvgp/issues"
Changelog = "https://github.com/lbl-camera/fvgp/commits/master/"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fvgp/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/examples",
    "/tests",
    "/obsolete",
]

[tool.hatch.build.targets.wheel]
packages = ["fvgp"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
